<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mi pocket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="NewPerson">Add new person</string>
    <string name="MoneyTab">Money Tab</string>
    <string name="KnowMe">Know Me</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="title_activity_money_tab">Money Tab</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="title_activity_account_no">Connect with me:)</string>
    <string name="enterName">enter name</string>
    <string name="az_appkey">d58fdd8af3e9d3ddbe2de111653292ab</string>
    <string name="give">You gave</string>
    <string name="borrow">you borrowed</string>
    <string name="done">done</string>
    <string name="title_activity_password_enter">mi pocket</string>
    <string name="go">go</string>
    <string name="title_activity_user_passwords">User Passwords</string>
    <string name="title_activity_error">Error</string>
    <string name="TryAgain">try again</string>
    <string name="EnterName">Enter Name</string>
    <string name="FirstNameLastName">FirstName LastName</string>
    <string name="YouDebited">You debited</string>
    <string name="money">money</string>
    <string name="fb">facebook</string>
    <string name="YouGave">You gave</string>
    <string name="Enterdetails">done</string>
    <string name="googleplus">googleplus</string>
    <string name="linkedin">linkedin</string>
    <string name="twitter">twitter</string>
    <string name="coffee">connect with me</string>
    <string name="UserName">User name</string>
    <string name="Password">Password</string>
    <string name="title_activity_email_enter">EmailEnter</string>
    <string name="email">email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_update_pass">UpdatePass</string>
    <string name="title_activity_change_mail">ChangeMail</string>
    <string name="enter_mail_address">Enter your current email address</string>
    <string name="Settings">Settings</string>
    <string name="CurrentUserName">Enter current username</string>
    <string name="CurrentPassword">Enter current password</string>
    <string name="NewUserName">Enter new user name</string>
    <string name="NewPassword">Enter new password</string>
    <string name="DailyExpense">Your daily expenses</string>
    <string name="title_activity_daily_expense">Daily Expense</string>
    <string name="forgot_psswrd">forgot password?</string>
    <string name="zero">0</string>
    <string name="date">date</string>
    <string name="tab">tab</string>
    <string name="Rs">Rs </string>
    <string name="empty"></string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="title_activity_update__debt">update debt</string>
    <string name="add_expense">add expense</string>
    <string name="title_activity_add_daily">Add daily expense</string>
    <string name="title">title</string>
    <string name="spent">spent</string>
    <string name="got">got</string>
    <string name="previous_days_expenses">previous day</string>
    <string name="title_activity_previous_days">Previous day\'s expenses</string>
    <string name="day">day</string>
    <string name="clear_all">clear all</string>
    <string name="password_protection">Password protection</string>
    <string name="connect">connect</string>
    <string name="view_tabs">view tabs</string>
    <string name="title_activity_update__daily">Update_Daily</string>
    <string name="add">add expense</string>
    <string name="subtract">subtract expense</string>
    <string name="view">view</string>
    <string name="title_activity_previous_days_sub_view">PreviousDaysSubView</string>
    <string name="title_activity_notify_tabs">NotifyTabs</string>

</resources>
