<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pocket.AddPerson"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/xxxgive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name1"
        android:layout_marginTop="26dp"
        android:text="@string/give"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/xxxborrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/give1"
        android:layout_marginTop="27dp"
        android:text="@string/borrow"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/done1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/borrow1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/done" />

    <TextView
        android:id="@+id/xxxname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:text="@string/enterName"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/xxxname"
        android:hint="@string/FirstNameLastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/borrow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/xxxborrow"
        android:hint="@string/money"
        android:inputType="number|numberSigned|numberDecimal"
        android:text="@string/zero" />

    <EditText
        android:id="@+id/give1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/xxxgive"
        android:hint="@string/money"
        android:inputType="number|numberSigned|numberDecimal"
        android:text="@string/zero" />

</RelativeLayout>
