<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/mainback"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mipocket.pocket.Update_Debt" >

     <TextView
         android:id="@+id/xgive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="26dp"
         android:text="@string/give"
         android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/upt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xgive"
        android:layout_below="@+id/xgive"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/money"
        android:inputType="number|numberSigned|numberDecimal"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/xborrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upt1"
        android:layout_below="@+id/upt1"
        android:layout_marginTop="37dp"
        android:text="@string/borrow"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/upt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xborrow"
        android:layout_below="@+id/xborrow"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/money"
        android:inputType="number|numberSigned|numberDecimal"
        android:text="@string/zero" />

    <Button
        android:id="@+id/upbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upt2"
        android:background="@drawable/main_btn_shape_color"
        android:layout_below="@+id/upt2"
        android:layout_marginTop="29dp"
        android:text="@string/update" />

</RelativeLayout>
