<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback"
    tools:context="com.mipocket.pocket.PasswordEnter"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterPass"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/enterPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enterName"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/enterPass"
        android:layout_toRightOf="@+id/enterPass"
        android:background="@drawable/tick3"
        android:contentDescription="@string/go"
        android:src="@drawable/tick_shape_color" />

    <Button
        android:id="@+id/forgtPsswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/enterName"
        android:layout_below="@+id/enterPass"
        android:layout_marginRight="32dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/forgt_shape_color"
        android:gravity="center"
        android:text="@string/forgot_psswrd" />

</RelativeLayout>