<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/mainback"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mipocket.pocket.EmailEnter" >

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/MailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/EmailDone"
        android:layout_below="@+id/EmailText"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/EmailDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_btn_shape_color"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MailInput"
        android:layout_marginTop="16dp"
        android:text="@string/done" />

</RelativeLayout>
